tests/snapshots/tui_render__security_tab_findings.snap
---
source: tests/tui_render.rs
expression: output
---
│ NAVIGATION            Overview > Findings   Accounts   Listening Services   Firewall   Integrity
│   Dashboard         ┌  Security findings  ───────────────────────────────────────────────────────┐
│   System +          │Severity  Category       Finding                                     Impact │
│   Network +         │> INFO    exposure       SSH is listening on all interfaces          -0     │
│   Discovery +       │HIGH      firewall       Host firewall appears disabled              -12    │
│   Scanner -         │                                                                            │
│ > Security x        │                                                                            │
│   Monitor |         │                                                                            │
│   Doctor x          │                                                                            │
│   Reports           │                                                                            │
│   Snapshots -       │                                                                            │
│   Settings          │                                                                            │
│                     │                                                                            │
│ 88/100 (B)          │                                                                            │
│ Security score      │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     └────────────────────────────────────────────────────────────────────────────┘
 -> Navigate   Enter Open   / Search   r Refresh   ? Help   q Quit
  Left/Right tabs   Enter details
