tests/snapshots/tui_render__security_tab_integrity.snap
---
source: tests/tui_render.rs
expression: output
---
│ NAVIGATION            Overview   Findings   Accounts   Listening Services   Firewall > Integrity
│   Dashboard         ┌ Integrity ─────────────────────────────────────────────────────────────────┐
│   System +          │ Baseline: 0 entries, created <TIMESTAMP>                     │
│   Network +         │ Paths: /etc/passwd, /etc/ssh/sshd_config                                   │
│   Discovery +       │  c Create baseline   s Scan against baseline                               │
│   Scanner -         │                                                                            │
│ > Security x        │ MODIFIED /etc/ssh/sshd_config                                              │
│   Monitor |         │    - content hash changed                                                  │
│   Doctor x          │ 1 unchanged file(s)                                                        │
│   Reports           │                                                                            │
│   Snapshots -       │                                                                            │
│   Settings          │                                                                            │
│                     │                                                                            │
│ 88/100 (B)          │                                                                            │
│ Security score      │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     │                                                                            │
│                     └────────────────────────────────────────────────────────────────────────────┘
 -> Navigate   Enter Open   / Search   r Refresh   ? Help   q Quit
  Left/Right tabs   Enter details
